--- a/src/App.css
+++ b/src/App.css
@@ -92,7 +92,7 @@ header {
   border: 1px solid #d3daeb;
   margin-bottom: 13px;
   padding: 6px;
-  border-radius: 24px;
+  border-radius: 20px;
 }
 header button {
   width: auto;
@@ -229,3 +229,6 @@ body {
   display: flex;
   justify-content: center;
 } */
+ .beta {
+  margin-top: 10px;
+ }
